deployNsgs.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "location": {
        "type": "string"
      },
        "adfsSubnetAddressRange": {
            "type": "string"
        },
        "dmzSubnetAddressRange": {
            "type": "string"
        },
        "managementSubnetAddressRange": {
            "type": "string"
        }  
      },
    "resources": [
      {
        "comments": "ADFS NSG",
        "name": "adfs-sn-nsg",
        "apiVersion": "2015-06-15",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "[parameters('location')]",
        "properties": {
          "securityRules": [
            {
              "name": "AllowRDP",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound"
              }
            },
            {
              "name": "AllowHTTPSFromDMZ",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "[parameters('dmzSubnetAddressRange')]",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 200,
                "direction": "Inbound"
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound"
              }
            },
            {
              "name": "AllowRdpOut",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1200,
                "direction": "Outbound"
              }
            }
          ]
        }
      },
      {
        "comments": "DMZ NSG",
        "name": "dmz-sn-nsg",
        "apiVersion": "2015-06-15",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "[parameters('location')]",
        "properties": {
          "securityRules": [
            {
              "name": "AllowRDP",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound"
              }
            },
            {
              "name": "AllowHttpsFromAnywhere",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 200,
                "direction": "Inbound"
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "properties": {
                "description": "Allow inbound traffic from azure load balancer",
                "direction": "Inbound",
                "priority": 400,
                "protocol": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "*",
                "access": "Allow"
              }
            },
            {
              "name": "AllowHttpsOut",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Outbound"
              }
            },
            {
              "name": "AllowHttpOutALB",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "AzureLoadBalancer",
                "access": "Allow",
                "priority": 1100,
                "direction": "Outbound"
              }
            },
            {
              "name": "AllowRdpOut",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1200,
                "direction": "Outbound"
              }
            }
          ]
        }
      },
      {
        "comments": "MGMT NSG",
        "name": "mgmt-sn-nsg",
        "apiVersion": "2015-06-15",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "[parameters('location')]",
        "properties": {
          "securityRules": [
            {
              "name": "AllowRDP",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound"
              }
            },
            {
              "name": "AllowRdpOut",
              "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1200,
                "direction": "Outbound"
              }
            }
          ]
        }
      }
    ]
}
